[package]
name = "litesvm_perf_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio"] }
hashbrown = "0.16.0"
minstant = "0.1.7"
mollusk-svm = "0.7.1"
agave-feature-set = "3.0"
solana-account = "3.2.0"
solana-message = "3"
solana-client = "3.0"
solana-sdk = "3.0"
solana-pubkey = "3.0"
solana-address-lookup-table-interface = "3.0"
solana-sdk-ids = "3.0"
bincode = "1.3.3"
jupiter-swap-api-client = { git = "https://github.com/drift-labs/jupiter-swap-api-client.git", package = "jupiter-swap-api-client"}
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = [
  "parking_lot",
  "env-filter",
] }
litesvm = { git = "https://github.com/litesvm/litesvm", rev = "8f6bd90bec72afc39d88f4032e1826be5294353c", features = ["hashbrown", "precompiles"] } # 3 commits after v0.8.1 (removed some dependencies causing problems upgrading to 3.0, precompiles behind a flag)
spl-token = { version = "9", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8", features = ["no-entrypoint"] }
dotenv = "0.15.0"

[[bench]]
name = "benchmark_perf"
harness = false
